--- a/core/res/res/values/public.xml
+++ b/core/res/res/values/public.xml
@@ -3752,5 +3752,6 @@
   <public type="attr" name="listPreferredItemPaddingStart" />
   <public type="attr" name="listPreferredItemPaddingEnd" />
   <public type="attr" name="singleUser" />
+  <public type="attr" name="presentationTheme" />
 
 </resources>
