Full-height panels on phones.
The dynamic carrier label is also back for those devices.

Finally, allow the panel to be dragged just by touching the
(newly reopened) empty area.

Bug: 6999596
Change-Id: I65f2867f1bd1977270de0bcedd32cb7141fcb6b1

--- a/packages/SystemUI/res/layout/super_status_bar.xml
+++ b/packages/SystemUI/res/layout/super_status_bar.xml
@@ -40,11 +40,11 @@
         >
         <include layout="@layout/status_bar_expanded"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             />
         <include layout="@layout/quick_settings"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             />
     </com.android.systemui.statusbar.phone.PanelHolder>
 
