--- a/core/res/res/layout/keyguard_selector_view.xml
+++ b/core/res/res/layout/keyguard_selector_view.xml
@@ -32,7 +32,7 @@
         android:layout_height="0dip"
         android:layout_weight="1"
         android:visibility="gone">
-            <!-- TODO: Remove this once supported as a widget -->
+            <!-- TODO: Remove this when supported as a widget -->
             <include layout="@layout/keyguard_status_view"/>
     </com.android.internal.policy.impl.keyguard.KeyguardWidgetPager>
 
