Initial pass at adding Music control to new keyguard.
- View is now added or removed based on AudioManager status
- Reduced depth of hierarchy by making KeyguardTransportControl a KeyguardWidgetFrame
- Return to the status view when we return to keyguard (onScreenTurnedOn)

Change-Id: Id7f9310ce4e7daf663471117564e5670f61b1471

--- a/core/res/res/layout-sw600dp-land/keyguard_host_view.xml
+++ b/core/res/res/layout-sw600dp-land/keyguard_host_view.xml
@@ -35,6 +35,7 @@
 
         <!-- TODO: Remove this once supported as a widget -->
         <include layout="@layout/keyguard_status_view"/>
+        <include layout="@layout/keyguard_transport_control_view"/>
 
     </com.android.internal.policy.impl.keyguard.KeyguardWidgetPager>
 
